--- a/index.html
+++ b/index.html
@@ -207,19 +207,19 @@
                 <div id="search-results-dropdown" class="search-results-dropdown"></div>
             </div>
 
-            <div class="search-content">
+             <div class="search-content">
                 <h5 class="content-title">Trending Now</h5>
                 <ul class="content-list trending-list">
                     <li><a href="#ui-ux-design">UI/UX Design</a></li>
-                    <li><a href="#corporate-websites">Corporate Websites</a></li>
-                    <li><a href="#seo-services">SEO Services</a></li>
+                    <li><a href="#website-development">Corporate Websites</a></li>
+                    <li><a href="#website-development">SEO Services</a></li>
                 </ul>
 
                 <h5 class="content-title">Browse Our Services</h5>
                 <ul class="content-list services-list">
                     <li><a href="#website-development">Website Development</a></li>
-                    <li><a href="#digital-marketing">Digital Marketing</a></li>
-                    <li><a href="#portfolio-showcase">Portfolio Showcase</a></li>
+                    <li><a href="#website-development">Digital Marketing</a></li>
+                    <li><a href="#website-development">Portfolio Showcase</a></li>
                 </ul>
             </div>
         </div>
@@ -1618,5 +1618,6 @@
 
 
 </body>
+
 
 </html>
