--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@
                     </svg></div>
             </div>
         </div>
+<div class="swiper-pagination"></div>
 
     </section>
 
@@ -1649,6 +1650,7 @@
 
 
 </html>
+
 
 
 
