--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
         </div>
     </section>
 
-    <section id="heads" class="py-20">
+        <section id="heads" class="py-20">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Team Section Content -->
             <div class="text-center mb-16">
@@ -770,18 +770,14 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-10 lg:gap-16 justify-center">
                 <!-- Founder Card: Mohamed Rizwan -->
-                <div class="rounded-xl overflow-hidden shadow-lg p-6 text-center transform transition-all duration-300 team-card-hover"
-                    style="background-color: #ecad6f;">
+                <div class="rounded-xl overflow-hidden shadow-lg p-6 text-center transform transition-all duration-300 team-card-hover" style="background-color: #ecad6f;">
                     <!-- Placeholder image to replace img/founder.png -->
-                    <img src="img/founder.png" alt="Mohamed Rizwan"
-                        class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                    <img src="img/founder.png" alt="Mohamed Rizwan" class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
                     <h5 class="text-xl font-bold text-gray-1500 mb-1">MOHAMED RIZWAN</h5>
-                    <p class="text-sm text-gray-1500 font-medium mb-4">FOUNDER</p>
-                    <a href="#" class="inline-block text-black-1000 transition-colors duration-300 linkedin-link">
+                    <p class="text-sm text-gray-1500 font-medium mb-4">Expert in Web Design & Development | UI/UX Designer <br> Turning ideas into engaging digital experiences.</p>
+                    <a href="https://www.linkedin.com/in/mohamed-rizwan-r-769015324/" class="inline-block text-black-1000 transition-colors duration-300 linkedin-link">
                         <!-- LinkedIn SVG icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-linkedin">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                             <rect width="4" height="12" x="2" y="9" />
                             <circle cx="4" cy="4" r="2" />
@@ -790,18 +786,14 @@
                 </div>
 
                 <!-- Founder Card: Kanimozhi -->
-                <div class="rounded-xl overflow-hidden shadow-lg p-6 text-center transform transition-all duration-300 team-card-hover"
-                    style="background-color: #ecad6f;">
+                <div class="rounded-xl overflow-hidden shadow-lg p-6 text-center transform transition-all duration-300 team-card-hover" style="background-color: #ecad6f;">
                     <!-- Placeholder image to replace img/CEO.jpg -->
-                    <img src="img/CEO.jpg" alt="Kanimozhi"
-                        class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
-                    <h5 class="text-xl font-bold text-gray-1500 mb-1">KANIMOZHI</h5>
-                    <p class="text-sm text-gray-1500 font-medium mb-4">CEO</p>
-                    <a href="#" class="inline-block text-black-1000 transition-colors duration-300 linkedin-link">
+                    <img src="img/CEO.jpg" alt="Kanimozhi" class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                    <h5 href="#https://www.linkedin.com/in/kanimozhi-v-9a7528291/" class="text-xl font-bold text-gray-1500 mb-1">KANIMOZHI</h5>
+                    <p class="text-sm text-gray-1500 font-medium mb-4">Specialist in Web Design & Development | Digital Marketing Expert <br> Crafting impactful online experiences.</p>
+                    <a href="https://www.linkedin.com/in/kanimozhi-v-9a7528291/" class="inline-block text-black-1000 transition-colors duration-300 linkedin-link">
                         <!-- LinkedIn SVG icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-linkedin">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                             <rect width="4" height="12" x="2" y="9" />
                             <circle cx="4" cy="4" r="2" />
@@ -823,24 +815,19 @@
                 <!-- Value 1: Vision -->
                 <div class="bg-white rounded-xl shadow-lg p-8 transform transition-all duration-300 values-card-hover">
                     <div class="flex justify-center mb-6">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-eye text-indigo-500">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye text-indigo-500">
                             <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z" />
                             <circle cx="12" cy="12" r="3" />
                         </svg>
                     </div>
                     <h5 class="text-2xl font-bold text-gray-900 mb-2">Vision</h5>
-                    <p class="text-gray-600 leading-relaxed">We turn forward-thinking concepts into actionable digital
-                        realities, ensuring your brand is always ahead of the curve.</p>
+                    <p class="text-gray-600 leading-relaxed">We turn forward-thinking concepts into actionable digital realities, ensuring your brand is always ahead of the curve.</p>
                 </div>
 
                 <!-- Value 2: Precision -->
                 <div class="bg-white rounded-xl shadow-lg p-8 transform transition-all duration-300 values-card-hover">
                     <div class="flex justify-center mb-6">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-mouse-pointer-click text-blue-500">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mouse-pointer-click text-blue-500">
                             <path d="m9 9 5 5" />
                             <path d="M13.5 1.5 18 6l-4.5 4.5" />
                             <path d="M17.5 17.5 22 22" />
@@ -849,24 +836,20 @@
                         </svg>
                     </div>
                     <h5 class="text-2xl font-bold text-gray-900 mb-2">Precision</h5>
-                    <p class="text-gray-600 leading-relaxed">Our commitment to meticulous detail ensures every project
-                        is pixel-perfect, flawlessly functional, and built to last.</p>
+                    <p class="text-gray-600 leading-relaxed">Our commitment to meticulous detail ensures every project is pixel-perfect, flawlessly functional, and built to last.</p>
                 </div>
 
                 <!-- Value 3: Growth -->
                 <div class="bg-white rounded-xl shadow-lg p-8 transform transition-all duration-300 values-card-hover">
                     <div class="flex justify-center mb-6">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-trending-up text-green-500">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-trending-up text-green-500">
                             <polyline points="18 13 22 9 18 5" />
                             <path d="M2 14v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2Z" />
                             <line x1="12" x2="12" y1="2" y2="12" />
                         </svg>
                     </div>
                     <h5 class="text-2xl font-bold text-gray-900 mb-2">Growth</h5>
-                    <p class="text-gray-600 leading-relaxed">We build scalable solutions that grow with your business,
-                        empowering you to adapt and succeed in a dynamic market.</p>
+                    <p class="text-gray-600 leading-relaxed">We build scalable solutions that grow with your business, empowering you to adapt and succeed in a dynamic market.</p>
                 </div>
             </div>
         </div>
@@ -1666,6 +1649,7 @@
 
 
 </html>
+
 
 
 
