--- a/index.html
+++ b/index.html
@@ -1154,74 +1154,47 @@
 
 
 
-    <section id="Feedback" class="py-16">
-        <div class="container mx-auto px-4">
-            <!-- Section Header -->
-            <div class="text-center mb-12">
-                <h2 class="text-4xl md:text-5xl font-extrabold text-gray-900">What Our Clients Say</h2>
-                <p class="mt-4 text-xl text-gray-600">See how we've helped businesses like yours thrive online.</p>
-            </div>
-
-            <!-- Swiper Container -->
-            <div class="swiper-container my-10 relative">
-                <div class="swiper-wrapper">
-                    <!-- Testimonial 1 -->
-                    <div class="swiper-slide p-2">
-                        <div class="testimonial-card flex flex-col justify-between">
-                            <blockquote class="text-lg italic text-gray-700">
-                                <p>“Delivered a modern website that boosted our online leads by 50% — clean design and flawless functionality.”</p>
-                            </blockquote>
-                            <div class="mt-6 text-right font-semibold text-gray-800">
-                                <cite class="not-italic">— TechEdge</cite>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Testimonial 2 -->
-                    <div class="swiper-slide p-2">
-                        <div class="testimonial-card flex flex-col justify-between">
-                            <blockquote class="text-lg italic text-gray-700">
-                                <p>“Creative ideas, pixel-perfect design, and super smooth user experience — highly recommend!”</p>
-                            </blockquote>
-                            <div class="mt-6 text-right font-semibold text-gray-800">
-                                <cite class="not-italic">— Denim Craze</cite>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Testimonial 3 -->
-                    <div class="swiper-slide p-2">
-                        <div class="testimonial-card flex flex-col justify-between">
-                            <blockquote class="text-lg italic text-gray-700">
-                                <p>“Turned our outdated site into a modern, mobile-friendly platform — way better than we imagined.”</p>
-                            </blockquote>
-                            <div class="mt-6 text-right font-semibold text-gray-800">
-                                <cite class="not-italic">— WebWorks</cite>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Testimonial 4 -->
-                    <div class="swiper-slide p-2">
-                        <div class="testimonial-card flex flex-col justify-between">
-                            <blockquote class="text-lg italic text-gray-700">
-                                <p>“More than expected — responsive design, fast delivery, and clear communication throughout the project.”</p>
-                            </blockquote>
-                            <div class="mt-6 text-right font-semibold text-gray-800">
-                                <cite class="not-italic">— Code & Coffee</cite>
-                            </div>
-                        </div>
+   <section id="Feedback" class="testimonials py-5 bg-light">
+        <div class="section-header text-center mt-5">
+            <h3 class="section-title">HAPPY CLIENTS, HAPPY CODE!</h3>
+        </div>
+        <div class="swiper testimonial-swiper overflow-hidden my-5">
+            <div class="swiper-wrapper d-flex">
+                <div class="swiper-slide">
+                    <div class="testimonial-item text-center">
+                        <blockquote>
+                            <p>“Turned our outdated site into a modern, mobile-friendly platform — way better than we imagined.”</p>
+                            <div class="review-title text-uppercase">WebWorks</div>
+                        </blockquote>
                     </div>
                 </div>
-
-                <!-- Pagination bullets -->
-                <div class="swiper-pagination mt-4"></div>
-
-                <!-- Navigation arrows -->
-                <div class="swiper-button-next text-gray-800"></div>
-                <div class="swiper-button-prev text-gray-800"></div>
+                <div class="swiper-slide">
+                    <div class="testimonial-item text-center">
+                        <blockquote>
+                            <p>“Delivered a modern website that boosted our online leads by 50% — clean design and flawless functionality.”</p>
+                            <div class="review-title text-uppercase">TechEdge</div>
+                        </blockquote>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-item text-center">
+                        <blockquote>
+                            <p>“Creative ideas, pixel-perfect design, and super smooth user experience — highly recommend!”</p>
+                            <div class="review-title text-uppercase">Denim craze</div>
+                        </blockquote>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-item text-center">
+                        <blockquote>
+                            <p>“More than expected — responsive design, fast delivery, and clear communication throughout the project.”</p>
+                            <div class="review-title text-uppercase">Code & Coffee</div>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="testimonial-swiper-pagination d-flex justify-content-center mb-5"></div>
     </section>
 
 
@@ -1649,6 +1622,7 @@
 
 
 </html>
+
 
 
 
