--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 
 
 
@@ -765,57 +768,186 @@
             <!-- Team Section Content -->
             <div class="text-center mb-16">
                 <h4 class="text-4xl font-bold text-gray-900 mb-4">
-                    Meet Our Heads
+                    Introducing Our Visionary Team
                 </h4>
                 <p class="text-lg text-gray-600 max-w-2xl mx-auto leading-relaxed">
-                    The visionaries and creators who started it all, dedicated to bringing your digital ideas to life.
+                    Meet the minds behind the magic. These are the innovators and creators who are committed to
+                    transforming your digital dreams into reality.
                 </p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-10 lg:gap-16 justify-center">
-                <!-- Founder Card: Mohamed Rizwan -->
-                <div class="rounded-xl overflow-hidden shadow-lg p-6 text-center transform transition-all duration-300 team-card-hover"
-                    style="background-color: #ecad6f;">
-                    <!-- Placeholder image to replace img/founder.png -->
-                    <img src="img/founder.png" alt="Mohamed Rizwan"
-                        class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
-                    <h5 class="text-xl font-bold text-gray-1500 mb-1">MOHAMED RIZWAN</h5>
-                    <p class="text-sm text-gray-1500 font-medium mb-4">Expert in Web Design & Development | UI/UX
-                        Designer <br> Turning ideas into engaging digital experiences.</p>
-                    <a href="https://www.linkedin.com/in/mohamed-rizwan-r-769015324/"
-                        class="inline-block text-black-1000 transition-colors duration-300 linkedin-link">
-                        <!-- LinkedIn SVG icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-linkedin">
-                            <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
-                            <rect width="4" height="12" x="2" y="9" />
-                            <circle cx="4" cy="4" r="2" />
-                        </svg>
-                    </a>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 justify-center max-w-7xl mx-auto">
+
+                <!-- Member Card 1: Mohamed Rizwan -->
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="img/founder.png" alt="Mohamed Rizwan"
+                                class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">MOHAMED RIZWAN</h5>
+                            <p class="text-sm font-medium">FULL STACK DEVELOPER</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="text-sm text-gray-800 font-medium mb-4 text-center">This is more than just a
+                                developer—this is a creator. As the founder of TECHOSIS, they specialize in weaving
+                                together the best of Web Design & Development with insightful UI/UX Design. </p>
+                            <a href="https://www.linkedin.com/in/mohamed-rizwan-r-769015324/"
+                                class="inline-block text-gray-900 transition-colors duration-300">
+                                <!-- LinkedIn SVG icon -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                    <path
+                                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                    <rect width="4" height="12" x="2" y="9" />
+                                    <circle cx="4" cy="4" r="2" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
-                <!-- Founder Card: Kanimozhi -->
-                <div class="rounded-xl overflow-hidden shadow-lg p-6 text-center transform transition-all duration-300 team-card-hover"
-                    style="background-color: #ecad6f;">
-                    <!-- Placeholder image to replace img/CEO.jpg -->
-                    <img src="img/CEO.jpg" alt="Kanimozhi"
-                        class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
-                    <h5 href="#https://www.linkedin.com/in/kanimozhi-v-9a7528291/"
-                        class="text-xl font-bold text-gray-1500 mb-1">KANIMOZHI</h5>
-                    <p class="text-sm text-gray-1500 font-medium mb-4">Specialist in Web Design & Development | Digital
-                        Marketing Expert <br> Crafting impactful online experiences.</p>
-                    <a href="https://www.linkedin.com/in/kanimozhi-v-9a7528291/"
-                        class="inline-block text-black-1000 transition-colors duration-300 linkedin-link">
-                        <!-- LinkedIn SVG icon -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="lucide lucide-linkedin">
-                            <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
-                            <rect width="4" height="12" x="2" y="9" />
-                            <circle cx="4" cy="4" r="2" />
-                        </svg>
-                    </a>
+                <!-- Member Card 2: Kanimozhi -->
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="img/CEO.jpg" alt="Kanimozhi"
+                                class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">KANIMOZHI</h5>
+                            <p class="text-sm font-medium">WEB DESIGNER</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="text-sm text-gray-800 font-medium mb-4 text-center">Specialist in Web Design &
+                                Development | Digital Marketing Expert. Crafting impactful online experiences.</p>
+                            <a href="https://www.linkedin.com/in/kanimozhi-v-9a7528291/"
+                                class="inline-block text-gray-900 transition-colors duration-300">
+                                <!-- LinkedIn SVG icon -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                    <path
+                                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                    <rect width="4" height="12" x="2" y="9" />
+                                    <circle cx="4" cy="4" r="2" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- Member Card 3: New Member 1 -->
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="RIAZ.jpg" alt="New Member 1"
+                                class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">MOHAMMED RIAZ</h5>
+                            <p class="text-sm font-medium">GRAPHIC DESIGNER</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="text-sm text-gray-800 font-medium mb-4 text-center">An expert graphic designer
+                                with a passion for turning visions into visual realities. He specializes in creating
+                                modern, impactful designs that define our brand and connect with our audience on a
+                                deeper level.</p>
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                                <!-- LinkedIn SVG icon -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                    <path
+                                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                    <rect width="4" height="12" x="2" y="9" />
+                                    <circle cx="4" cy="4" r="2" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Member Card 4: New Member 2 -->
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="THIYAGU.jpg" alt="New Member 2"
+                                class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">SHANMUGA THIYAGARAJAN</h5>
+                            <p class="text-sm font-medium">AI/ML PROJECT LEAD </p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="text-sm text-gray-800 font-medium mb-4 text-center">
+                                An AI/ML Project Lead is a professional who guides a team in the development and
+                                deployment of artificial intelligence and machine learning projects.</p>
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                                <!-- LinkedIn SVG icon -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                    <path
+                                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                    <rect width="4" height="12" x="2" y="9" />
+                                    <circle cx="4" cy="4" r="2" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Member Card 5: New Member 3 -->
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="PRATHUSH.png" alt="New Member 3"
+                                class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">PRATYUSHA KUMAR PATI</h5>
+                            <p class="text-sm font-medium">DATA ANALYST</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="text-sm text-gray-800 font-medium mb-4 text-center">A data analyst is like a
+                                detective for a business. Your main job is to take raw, messy data and turn it into
+                                clear, actionable insights that help a company make smart decisions. </p>
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                                <!-- LinkedIn SVG icon -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                    <path
+                                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                    <rect width="4" height="12" x="2" y="9" />
+                                    <circle cx="4" cy="4" r="2" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Member Card 6: New Member 4 -->
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="SITHU.png" alt="New Member 4"
+                                class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">SIDDHARTH</h5>
+                            <p class="text-sm font-medium">BACK-END DEVELOPER</p>
+                        </div>
+                        <div class="flip-card-back">
+                            <p class="text-sm text-gray-800 font-medium mb-4 text-center">He's the one who builds the
+                                foundation. As a skilled back-end developer, he's responsible for the critical
+                                server-side logic and database architecture that brings our digital products to life.
+                            </p>
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                                <!-- LinkedIn SVG icon -->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                    <path
+                                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                    <rect width="4" height="12" x="2" y="9" />
+                                    <circle cx="4" cy="4" r="2" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <!-- Core Values Section Content -->
@@ -1153,6 +1285,8 @@
         </div>
         </div>
     </section>
+
+
 
 
     <section class="video py-5 overflow-hidden">
@@ -1596,7 +1730,8 @@
                                     class="w-12 h-12 flex items-center justify-center rounded-full bg-white text-pink-600 shadow-lg">
                                     <i class="fab fa-instagram text-2xl"></i>
                                 </a>
-                                <a href="https://www.linkedin.com/company/techosisindian/?viewAsMember=true" class="w-12 h-12 flex items-center justify-center rounded-full bg-white text-blue-700 shadow-lg">
+                                <a href="https://www.linkedin.com/company/techosisindian/?viewAsMember=true"
+                                    class="w-12 h-12 flex items-center justify-center rounded-full bg-white text-blue-700 shadow-lg">
                                     <i class="fab fa-linkedin-in text-2xl"></i>
                                 </a>
                             </div>
