--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 <!-- Content Column -->
                 <div class="bg-white p-8 md:p-12 flex flex-col justify-center">
                     <h3 class="text-5xl font-bold text-gray-900 mb-6">
-                        WHO WE ARE
+                        WHO WE ARE?
                     </h3>
                     <p class="text-lg text-gray-600 leading-relaxed mb-6">
                         At Techosis, we specialize in crafting modern, responsive, and high-performance websites that
@@ -925,7 +925,7 @@
                         <div class="flip-card-front">
                             <img src="SITHU.png" alt="New Member 4"
                                 class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
-                            <h5 class="text-xl font-bold text-gray-900 mb-1">SIDDHARTH</h5>
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">SITHARTH</h5>
                             <p class="text-sm font-medium">BACK-END DEVELOPER</p>
                         </div>
                         <div class="flip-card-back">
@@ -1922,3 +1922,4 @@
 
 
 </html>
+
