--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
                                 with a passion for turning visions into visual realities. He specializes in creating
                                 modern, impactful designs that define our brand and connect with our audience on a
                                 deeper level.</p>
-                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                            <a href="https://www.linkedin.com/in/zzayir?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bs2BbR6tGQ%2BWDjKeAGhM78w%3D%3D" class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -904,7 +904,7 @@
                             <p class="text-sm text-gray-800 font-medium mb-4 text-center">A data analyst is like a
                                 detective for a business. Your main job is to take raw, messy data and turn it into
                                 clear, actionable insights that help a company make smart decisions. </p>
-                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                            <a href="https://www.linkedin.com/in/pratyusha-kumar-pati?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BcrbFlMZNQa%2BxDCIgPMbdGw%3D%3D" class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -933,7 +933,7 @@
                                 foundation. As a skilled back-end developer, he's responsible for the critical
                                 server-side logic and database architecture that brings our digital products to life.
                             </p>
-                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
+                            <a href="https://www.linkedin.com/in/sitharth-sithu-2135382a4/" class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -1922,4 +1922,5 @@
 
 
 </html>
+
 
